k8s/ecommerce-real/templates/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend

spec:
  type: NodePort

  selector:
    app: frontend

  ports:
    - name: http
      port: 80
      targetPort: 80
