k8s/ecommerce-real/templates/notification-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: notification-service

spec:
  type: ClusterIP

  selector:
    app: notification-service

  ports:
    - name: http
      port: 8080
      targetPort: 8080
