k8s/ecommerce-real/templates/order-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: order-service

spec:
  type: ClusterIP

  selector:
    app: order-service

  ports:
    - name: http
      port: 8080
      targetPort: 8080
