k8s/ecommerce-real/templates/product-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: product-service

spec:
  type: ClusterIP

  selector:
    app: product-service

  ports:
    - name: http
      port: 8080
      targetPort: 8080
